--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Navigation -->
     <nav class="nav">
         <div class="nav-container">
-            <a href="#home" class="nav-logo">AA</a>
+            <a href="#home" class="nav-logo">Atieh Armin</a>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#education">Education</a></li>
