--- a/index.html
+++ b/index.html
@@ -525,6 +525,16 @@
                     <p>atieh-armin</p>
                 </a>
                 
+                <a href="https://scholar.google.com/citations?user=vuubQDkAAAAJ&hl=en&oi=ao" target="_blank" rel="noopener" class="contact-card">
+                    <span class="contact-icon">
+                        <svg viewBox="0 0 24 24" fill="currentColor" width="24" height="24">
+                            <path d="M5.242 13.769L0 9.5 12 0l12 9.5-5.242 4.269C17.548 11.249 14.978 9.5 12 9.5c-2.977 0-5.548 1.748-6.758 4.269zM12 10a7 7 0 1 0 0 14 7 7 0 0 0 0-14z"/>
+                        </svg>
+                    </span>
+                    <h4>Google Scholar</h4>
+                    <p>View Publications</p>
+                </a>
+                
                 <a href="tel:+12672735162" class="contact-card">
                     <span class="contact-icon">📞</span>
                     <h4>Phone</h4>
