Changed about me

--- a/index.html
+++ b/index.html
@@ -74,9 +74,23 @@
                 <div class="about-text">
                     <p class="about-lead">
                         I am a PhD candidate in Computer Science at Drexel University, working under the guidance of 
-                        <strong>Dr. Ali Shokoufandeh</strong>. My research lies at the intersection of deep learning theory 
-                        and practical applications.
+                        <strong>Dr. Ali Shokoufandeh</strong>, where my work sits at the intersection of generative modeling, deep learning, and mathematical structure. My research focuses on understanding and designing learning systems not just as empirical tools, but as operators—objects with stability, geometry, and guarantees.
                     </p>
+                    <p>
+                        My current work explores transformer architectures and generative models through a theoretical and systems-oriented lens. I’ve developed novel attention mechanisms that enforce spectral stability and bounded gradients, graph neural networks inspired by dynamical systems with provable synchronization behavior, and frequency-aware and convexified attention models that improve interpretability and performance in data-limited settings. I’m particularly interested in bridging ideas from operator theory, physics-informed modeling, and modern generative AI, including diffusion and attention-based models.
+                    </p>
+                    <p>
+                        Beyond theory, I enjoy building systems that work in practice. My research spans applications from materials generation and industrial optimization to social media analysis and computer vision in healthcare. Across these domains, I care deeply about models that are robust, interpretable, and principled, not just accurate.
+                    </p>
+                    <p>
+                        I earned my B.Sc. in Computer Engineering from the University of Tehran, graduating with a 4.0 GPA and a concentration in machine learning and AI. Since then, I’ve worked across academia and industry, developing end-to-end ML pipelines, publishing peer-reviewed research, and collaborating across disciplines.
+                    </p>
+                    <p>
+                        Broadly, I’m motivated by one question: how can we design learning systems whose behavior we can understand, control, and trust? This question shapes both my research direction and how I think about the future of AI.
+                    </p>
+                        <!-- My research lies at the intersection of deep learning theory  -->
+                        <!-- and practical applications. -->
+                    <!-- </p>
                     <p>
                         My work focuses on developing novel architectures that incorporate mathematical principles from 
                         operator theory, spectral analysis, and dynamical systems into neural network design. I'm particularly 
@@ -85,9 +99,9 @@
                     <p>
                         Beyond research, I bring hands-on experience from internships and collaborative projects spanning 
                         healthcare AI, cryptocurrency analysis, and social media mining.
-                    </p>
+                    </p> -->
                 </div>
-                <div class="about-highlights">
+                <!-- <div class="about-highlights">
                     <div class="highlight-card">
                         <span class="highlight-icon">🎓</span>
                         <h4>Education</h4>
@@ -103,7 +117,7 @@
                         <h4>Publications</h4>
                         <p>Multiple papers<br>Under review & published</p>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
