--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <li><a href="#education">Education</a></li>
                 <li><a href="#research">Research</a></li>
                 <li><a href="#publications">Publications</a></li>
-                <li><a href="#ongoing-projects">Ongoing</a></li>
-                <li><a href="#projects">Projects</a></li>
+                <li><a href="#ongoing-projects">Ongoing Projects</a></li>
+                <li><a href="#projects">Previous Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -333,7 +333,7 @@
     <!-- Projects Section -->
     <section id="projects" class="section projects">
         <div class="container">
-            <h2 class="section-title">Projects</h2>
+            <h2 class="section-title">Previous Projects</h2>
             
             <div class="projects-grid">
                 <div class="project-card">
