--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="about-text">
                     <p>
                         I'm a Ph.D. researcher in Computer Science at Drexel University, working under the supervision of 
-                        <strong>Ali Shokoufandeh</strong>. My work sits at the intersection of generative modeling, deep learning, 
+                        <strong>Dr. Ali Shokoufandeh</strong>. My work sits at the intersection of generative modeling, deep learning, 
                         and mathematical structure, with a focus on understanding and designing learning systems not just as 
                         empirical tools, but as operators—objects with stability, geometry, and theoretical guarantees.
                     </p>
