--- a/index.html
+++ b/index.html
@@ -81,10 +81,13 @@
                     </p>
                     <p>
                         My current research explores transformer architectures and generative models through a theoretical and 
-                        systems-oriented lens. I've developed novel attention mechanisms that enforce spectral stability and 
-                        bounded gradients, graph neural networks inspired by dynamical systems with provable synchronization 
-                        behavior, and frequency-aware and convexified attention models that improve interpretability and 
-                        performance in data-limited settings. I'm particularly interested in bridging ideas from operator theory, 
+                        systems-oriented lens.
+                        
+                        Particularly, my research is driven by a single organizing question: <em>how should we design learning operators that are simultaneously expressive, stable, and aligned with the geometry of the data they act on?</em> 
+                        I approach generative modeling as a problem of operator design, studying how diffusion-based dynamics and attention mechanisms shape information flow, stability, and spectral behavior. 
+                        <!-- My goal is to unify the locality and robustness of diffusion with the global expressiveness of attention by embedding physically and mathematically grounded structure directly into the attention operator itself—leading to generative models that are scalable, interpretable, and well-behaved across depth, particularly on structured domains such as graphs. -->
+                        
+                        My goal is to bridge ideas from operator theory, 
                         physics-informed modeling, and modern generative AI, including diffusion and attention-based models.
                     </p>
                     <p>
@@ -96,9 +99,6 @@
                         I earned my B.Sc. in Computer Engineering from the University of Tehran, graduating with a 4.0 GPA and 
                         a concentration in machine learning and AI. Since then, I've worked across academia and industry, 
                         developing end-to-end ML pipelines, publishing peer-reviewed research, and collaborating across disciplines.
-                    </p>
-                    <p class="about-closing">
-                        Broadly, my research is driven by a single organizing question: <em>how should we design learning operators that are simultaneously expressive, stable, and aligned with the geometry of the data they act on?</em> I approach generative modeling as a problem of operator design, studying how diffusion-based dynamics and attention mechanisms shape information flow, stability, and spectral behavior. My goal is to unify the locality and robustness of diffusion with the global expressiveness of attention by embedding physically and mathematically grounded structure directly into the attention operator itself—leading to generative models that are scalable, interpretable, and well-behaved across depth, particularly on structured domains such as graphs.
                     </p>
                 </div>
             </div>
