--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
             </div>
             <div class="hero-visual">
                 <div class="hero-orb"></div>
+                <div class="hero-image-wrapper">
+                    <img src="pic.jpeg" alt="Atieh Armin" class="hero-image">
+                </div>
                 <div class="hero-ring"></div>
                 <div class="hero-ring hero-ring-2"></div>
             </div>
