--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                         physics-informed modeling, and modern generative AI, including diffusion and attention-based models.
                     </p>
                     <p>
-                        Beyond theory, I enjoy building systems that work in practice. My research spans applications from 
-                        materials generation and industrial optimization to social media analysis and computer vision in healthcare. 
+                        Beyond theory, I enjoy building systems that work in practice. My projects span applications from 
+                        materials generation to social media analysis and computer vision in healthcare. 
                         Across these domains, I care deeply about models that are robust, interpretable, and principled, not just accurate.
                     </p>
                     <p>
