edit publication links

--- a/index.html
+++ b/index.html
@@ -239,6 +239,16 @@
                             under convexity constraints, improving interpretability in data-limited industrial 
                             optimization with 95% R² accuracy.
                         </p>
+                        <div class="publication-links">
+                            <a href="https://iopscience.iop.org/article/10.1088/3049-4761/ae1bac/pdf" target="_blank" rel="noopener" class="publication-link">
+                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="14" height="14">
+                                    <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                                    <polyline points="15 3 21 3 21 9"></polyline>
+                                    <line x1="10" y1="14" x2="21" y2="3"></line>
+                                </svg>
+                                Paper
+                            </a>
+                        </div>
                     </article>
                     
                     <article class="publication-card">
@@ -251,6 +261,16 @@
                             nine topics, including community response to harassment and threats, law enforcement responses 
                             to harassment, and discussion around self-defense strategies.
                         </p>
+                        <div class="publication-links">
+                            <a href="https://dl.acm.org/doi/10.1145/3613905.3650849" target="_blank" rel="noopener" class="publication-link">
+                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="14" height="14">
+                                    <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                                    <polyline points="15 3 21 3 21 9"></polyline>
+                                    <line x1="10" y1="14" x2="21" y2="3"></line>
+                                </svg>
+                                Paper
+                            </a>
+                        </div>
                     </article>
                     
                     <article class="publication-card">
@@ -262,6 +282,16 @@
                             daily price of Bitcoin, Ethereum, and BNB Coin, providing comprehensive comparative analysis 
                             of prediction methodologies.
                         </p>
+                        <div class="publication-links">
+                            <a href="ieeexplore.ieee.org/abstract/document/10043898/" target="_blank" rel="noopener" class="publication-link">
+                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="14" height="14">
+                                    <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                                    <polyline points="15 3 21 3 21 9"></polyline>
+                                    <line x1="10" y1="14" x2="21" y2="3"></line>
+                                </svg>
+                                Paper
+                            </a>
+                        </div>
                     </article>
                 </div>
             </div>
