--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#publications">Publications</a></li>
                 <li><a href="#ongoing-projects">Ongoing Projects</a></li>
                 <li><a href="#projects">Previous Projects</a></li>
-                <li><a href="#skills">Skills</a></li>
+                <!-- <li><a href="#skills">Skills</a></li> -->
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <button class="nav-toggle" aria-label="Toggle navigation">
@@ -323,7 +323,7 @@
                     <div class="ongoing-header">
                         <span class="ongoing-status">In Progress</span>
                     </div>
-                    <h3>Spectral Attention Mechanism</h3>
+                    <h3>Damped Diffused Attention Mechanism</h3>
                     <p class="ongoing-description">
                         Designing a transformer architecture that regularizes attention before softmax via an SPD resolvent 
                         on queries and keys with layerwise damping. This produces spectrally controlled, stable attention 
@@ -474,9 +474,8 @@
             </div>
         </div>
     </section>
-
     <!-- Skills Section -->
-    <section id="skills" class="section skills">
+    <!-- <section id="skills" class="section skills">
         <div class="container">
             <h2 class="section-title">Technical Skills</h2>
             
@@ -545,7 +544,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Contact Section -->
     <section id="contact" class="section contact">
@@ -590,7 +589,7 @@
                         </svg>
                     </span>
                     <h4>Google Scholar</h4>
-                    <p>View Publications</p>
+                    <p>Atieh Armin</p>
                 </a>
             </div>
         </div>
