--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     <article class="publication-card">
                         <p class="publication-venue">Extended Abstracts of the CHI 2024</p>
                         <h3 class="publication-title">Support in Short Form: Investigating TikTok Comments on Videos with #Harassment</h3>
-                        <p class="publication-authors"><strong>Atieh Armin</strong>, JJ Trybala, J Young, A Razi</p>
+                        <p class="publication-authors"><strong>A Armin</strong>, JJ Trybala, J Young, A Razi</p>
                         <p class="publication-description">
                             Built an NLP pipeline (DistilBERT + per-video positional encodings + K-Means) to analyze 
                             recurring themes in 145,515 comments on TikTok videos tagged with #harassment, identifying 
@@ -276,7 +276,7 @@
                     <article class="publication-card">
                         <p class="publication-venue">2022 Iranian Conference on Signal Processing and Intelligent Systems (ICSPIS)</p>
                         <h3 class="publication-title">Comparison of Machine Learning Methods for Cryptocurrency Price Prediction</h3>
-                        <p class="publication-authors"><strong>Atieh Armin</strong>, A Shiri, B Bahrak</p>
+                        <p class="publication-authors"><strong>A Armin</strong>, A Shiri, B Bahrak</p>
                         <p class="publication-description">
                             Applied various machine learning models (ARIMA, SVM, RNN, LSTM, Bi-LSTM) to predict the 
                             daily price of Bitcoin, Ethereum, and BNB Coin, providing comprehensive comparative analysis 
